[package]
name = "big-int"
version = "0.21.0"
authors = ["Dynisious <daniel.bechaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitio = { version = "0.3", git = "https://github.com/Dynisious/bitio" }
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_cbor = "0.10"
